==> apache/nuttx/arch/arm/src/at32/at32_pulsecount.c <==
#include <nuttx/config.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdio.h>
#include <assert.h>
#include <errno.h>
#include <nuttx/debug.h>
#include <nuttx/arch.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "chip.h"
#include "at32_pulsecount.h"
#include "at32_rcc.h"
#include "at32_gpio.h"
#include "at32_tim.h"
#define TIMTYPE_ADVANCED  5
#define TIMTYPE_TIM1      TIMTYPE_ADVANCED
#define TIMTYPE_TIM8      TIMTYPE_ADVANCED
#define TIMTYPE_TIM20     TIMTYPE_ADVANCED
#  define TIMCLK_TIM1      AT32_APB2_TIM1_CLKIN
#  define TIMRCCEN_TIM1    AT32_CRM_APB2EN
#  define TIMEN_TIM1       CRM_APB2EN_TMR1EN
#  define TIMRCCRST_TIM1   AT32_CRM_APB2RST
#  define TIMRST_TIM1      CRM_APB2RST_TMR1RST
#  define TIMCLK_TIM8      AT32_APB2_TIM8_CLKIN
#  define TIMRCCEN_TIM8    AT32_CRM_APB2EN
#  define TIMEN_TIM8       CRM_APB2EN_TMR8EN
#  define TIMRCCRST_TIM8   AT32_CRM_APB2RST
#  define TIMRST_TIM8      CRM_APB2RST_TMR8RST
#  define TIMCLK_TIM20     AT32_APB2_TIM20_CLKIN
#  define TIMRCCEN_TIM20   AT32_CRM_APB2EN
#  define TIMEN_TIM20      CRM_APB2EN_TMR20EN
#  define TIMRCCRST_TIM20  AT32_CRM_APB2RST
#  define TIMRST_TIM20     CRM_APB2RST_TMR20RST
#define PINCFG_DEFAULT   (GPIO_INPUT | GPIO_FLOAT)
#define PULSECOUNT_POL_NEG      1
#define PULSECOUNT_IDLE_ACTIVE  1
#  define pulsecount_dumpgpio(p,m) at32_dumpgpio(p,m)
#  define pulsecount_dumpgpio(p,m)
#  define pulsecount_dumpregs(priv,msg)

static uint32_t pulsecount_getreg(struct at32_tim_s *priv, int offset)
{
  uint32_t retval = 0;

  if (pulsecount_reg_is_32bit(priv->timtype, offset) == true)
    {
      /* 32-bit register */

      retval = getreg32(priv->base + offset);
    }
  else
    {
      /* 16-bit register */

      retval = getreg16(priv->base + offset);
    }

  /* Return 32-bit value */

  return retval;
}

static void pulsecount_putreg(struct at32_tim_s *priv, int offset,
                              uint32_t value)
{
  if (pulsecount_reg_is_32bit(priv->timtype, offset) == true)
    {
      /* 32-bit register */

      putreg32(value, priv->base + offset);
    }
  else
    {
      /* 16-bit register */

      putreg16((uint16_t)value, priv->base + offset);
    }
}

static int pulsecount_timer(struct pulsecount_lowerhalf_s *dev,
                            const struct pulsecount_info_s *info)
{
  struct at32_tim_s *priv = (struct at32_tim_s *)dev;
  ub16_t    duty    = 0;
  uint8_t   channel = 0;
  uint16_t  outputs = 0;
  int       ret     = OK;

  /* If we got here then the timer instance supports pulsecount output. */

  DEBUGASSERT(priv != NULL && info != NULL);

  _info("TIM%u channel: %u high: %" PRIu32 " ns low: %" PRIu32
          " ns count: %" PRIu32 "\n",
          priv->timid, priv->channel.channel, info->high_ns,
          info->low_ns, info->count);

  DEBUGASSERT(pulsecount_frequency(info) > 0);

  /* Channel specific setup */

  duty    = pulsecount_duty(info);
  channel = priv->channel.channel;

  /* Disable all interrupts and DMA requests, clear all pending status */

  pulsecount_putreg(priv, AT32_GTIM_DIER_OFFSET, 0);
  pulsecount_putreg(priv, AT32_GTIM_SR_OFFSET, 0);

  /* Set timer frequency */

  ret = pulsecount_frequency_update(dev, pulsecount_frequency(info));
  if (ret < 0)
    {
      goto errout;
    }

  /* Update duty cycle */

  ret = pulsecount_duty_update(dev, channel, duty);
  if (ret < 0)
    {
      goto errout;
    }

  /* If a non-zero repetition count has been selected, then set the
   * repetition counter to the count-1 (pulsecount_start() has already
   * assured us that the count value is within range).
   */

  if (info->count > 0)
    {
      /* Save the remaining count and the number of counts that will have
       * elapsed on the first interrupt.
       */

      /* If the first interrupt occurs at the end end of the first
       * repetition count, then the count will be the same as the RCR
       * value.
       */

      priv->prev  = pulsecount_count(info->count);
      pulsecount_putreg(priv, AT32_ATIM_RCR_OFFSET, priv->prev - 1);

      /* Generate an update event to reload the prescaler.  This should
       * preload the RCR into active repetition counter.
       */

      pulsecount_putreg(priv, AT32_GTIM_EGR_OFFSET, GTIM_EGR_UG);

      /* Now set the value of the RCR that will be loaded on the next
       * update event.
       */

      priv->count = info->count;
      priv->curr  = pulsecount_count(info->count - priv->prev);
      pulsecount_putreg(priv, AT32_ATIM_RCR_OFFSET, priv->curr - 1);
    }

  /* Otherwise, just clear the repetition counter */

  else
    {
      /* Set the repetition counter to zero */

      pulsecount_putreg(priv, AT32_ATIM_RCR_OFFSET, 0);

      /* Generate an update event to reload the prescaler */

      pulsecount_putreg(priv, AT32_GTIM_EGR_OFFSET, GTIM_EGR_UG);
    }

  /* Get configured outputs */

  outputs = pulsecount_outputs_from_channels(priv, channel);

  /* Enable output */

  ret = pulsecount_outputs_enable(dev, outputs, true);
  if (ret < 0)
    {
      goto errout;
    }

  /* Setup update interrupt. If info->count is > 0, then we can
   * be assured that pulsecount_start() has already verified: (1) that
   * this is an advanced timer, and that (2) the repetition count is within
   * range.
   */

  if (info->count > 0)
    {
      /* Clear all pending interrupts and enable the update interrupt. */

      pulsecount_putreg(priv, AT32_GTIM_SR_OFFSET, 0);
      pulsecount_putreg(priv, AT32_GTIM_DIER_OFFSET, GTIM_DIER_UIE);

      /* Enable the timer */

      pulsecount_modifyreg(priv, AT32_GTIM_CR1_OFFSET, 0, GTIM_CR1_CEN);

      /* And enable timer interrupts at the NVIC */

      up_enable_irq(priv->irq);
    }

  pulsecount_dumpregs(dev, "After starting");

errout:
  return ret;
}

static int pulsecount_interrupt(struct pulsecount_lowerhalf_s *dev)
{
  struct at32_tim_s *priv = (struct at32_tim_s *)dev;
  uint16_t regval;

  /* Verify that this is an update interrupt.  Nothing else is expected. */

  regval = pulsecount_getreg(priv, AT32_ATIM_SR_OFFSET);
  DEBUGASSERT((regval & ATIM_SR_UIF) != 0);

  /* Clear the UIF interrupt bit */

  pulsecount_putreg(priv, AT32_ATIM_SR_OFFSET, (regval & ~ATIM_SR_UIF));

  /* Calculate the new count by subtracting the number of pulses
   * since the last interrupt.
   */

  if (priv->count <= priv->prev)
    {
      /* We are finished.  Turn off the master output to stop the output as
       * quickly as possible.
       */

      pulsecount_moe_enable(dev, false);

      /* Disable first interrupts, stop and reset the timer */

      pulsecount_ll_stop(dev);

      /* Then perform the callback into the upper half driver */

      pulsecount_expired(priv->handle);

      priv->handle = NULL;
      priv->count  = 0;
      priv->prev   = 0;
      priv->curr   = 0;
    }
  else
    {
      /* Decrement the count of pulses remaining using the number of
       * pulses generated since the last interrupt.
       */

      priv->count -= priv->prev;

      /* Set up the next RCR.  Set 'prev' to the value of the RCR that
       * was loaded when the update occurred (just before this interrupt)
       * and set 'curr' to the current value of the RCR register (which
       * will bet loaded on the next update event).
       */

      priv->prev = priv->curr;
      priv->curr = pulsecount_count(priv->count - priv->prev);
      pulsecount_putreg(priv, AT32_ATIM_RCR_OFFSET, priv->curr - 1);
    }

  /* Now all of the time critical stuff is done so we can do some debug
   * output.
   */

  _info("Update interrupt SR: %04" PRIx16 " prev: %u curr: %u"
          " count: %" PRIu32 "\n",
          regval, (unsigned int)priv->prev, (unsigned int)priv->curr,
          priv->count);

  return OK;
}

static int pulsecount_setup(struct pulsecount_lowerhalf_s *dev)
{
  struct at32_pulsecount_s *pulse = (struct at32_pulsecount_s *)dev;
  int ret;

  ret = pulsecount_ll_setup((struct pulsecount_lowerhalf_s *)pulse->timer);
  if (ret < 0)
    {
      return ret;
    }

  return pulsecount_configure((struct pulsecount_lowerhalf_s *)pulse->timer);
}

static int pulsecount_shutdown(struct pulsecount_lowerhalf_s *dev)
{
  struct at32_pulsecount_s *pulse = (struct at32_pulsecount_s *)dev;
  return pulsecount_ll_shutdown((struct pulsecount_lowerhalf_s *)
                                pulse->timer);
}

static int pulsecount_start(struct pulsecount_lowerhalf_s *dev,
                            const struct pulsecount_info_s *info,
                            void *handle)
{
  struct at32_pulsecount_s *pulse = (struct at32_pulsecount_s *)dev;
  struct at32_tim_s *priv = pulse->timer;

  if (info->count > 0)
    {
      if (priv->timtype != TIMTYPE_ADVANCED)
        {
          _err("ERROR: TIM%u cannot support pulse count: %" PRIu32 "\n",
                 priv->timid, info->count);
          return -EPERM;
        }
    }

  priv->handle = handle;
  return pulsecount_timer((struct pulsecount_lowerhalf_s *)priv, info);
}

static int pulsecount_stop(struct pulsecount_lowerhalf_s *dev)
{
  struct at32_pulsecount_s *pulse = (struct at32_pulsecount_s *)dev;
  return pulsecount_ll_stop((struct pulsecount_lowerhalf_s *)pulse->timer);
}

static int pulsecount_ioctl(struct pulsecount_lowerhalf_s *dev,
                            int cmd, unsigned long arg)
{
  struct at32_pulsecount_s *pulse = (struct at32_pulsecount_s *)dev;
  return pulsecount_ll_ioctl((struct pulsecount_lowerhalf_s *)pulse->timer,
                             cmd, arg);
}

struct pulsecount_lowerhalf_s *at32_pulsecountinitialize(int timer)
{
  struct at32_pulsecount_s *lower = NULL;

  _info("TIM%u\n", timer);

  switch (timer)
    {
#ifdef CONFIG_AT32_TIM1_PULSECOUNT
      case 1:
        {
          lower = &g_pulsecount1lower;
          irq_attach(lower->timer->irq, pulsecount_tim1interrupt, NULL);
          up_disable_irq(lower->timer->irq);
          break;
        }
#endif

#ifdef CONFIG_AT32_TIM8_PULSECOUNT
      case 8:
        {
          lower = &g_pulsecount8lower;
          irq_attach(lower->timer->irq, pulsecount_tim8interrupt, NULL);
          up_disable_irq(lower->timer->irq);
          break;
        }
#endif

#ifdef CONFIG_AT32_TIM20_PULSECOUNT
      case 20:
        {
          lower = &g_pulsecount20lower;
          irq_attach(lower->timer->irq, pulsecount_tim20interrupt, NULL);
          up_disable_irq(lower->timer->irq);
          break;
        }
#endif

      default:
        {
          _err("ERROR: TIM%d does not support pulse count\n", timer);
          return NULL;
        }
    }

  return (struct pulsecount_lowerhalf_s *)lower;
}
